<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>postgis_ros_bridge_demo</name>
  <version>0.0.0</version>
  <description>Demo publishing nodes using postgis_ros_bridge.</description>
  <maintainer email="matthias.schoerghuber@ait.ac.at">Matthias Schoerghuber</maintainer>
  <license>Apache License 2.0</license>
  <author email="matthias.schoerghuber@ait.ac.at">Matthias Schoerghuber</author>
  <author email="marco.wallner@ait.ac.at">Marco Wallner</author>
  <author email="markus.hofstaetter@ait.ac.at">Markus Hofstaetter</author>

  <exec_depend>postgis_ros_bridge</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <test_depend>launch_ros</test_depend>
  <test_depend>postgis_ros_bridge</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
